home-cluster/media/jellyfin/service/service-udp.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-udp
  namespace: home-samba
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 1900
      targetPort: 1900
      name: dlna-udp
      protocol: UDP
    - port: 7359
      targetPort: 7359
      name: discovery-udp
      protocol: UDP
  sessionAffinity: ClientIP
