home-cluster/media/jellyfin/service/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: home-media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jellyfin.local.solonsstuff.com`)
      kind: Rule
      services:
        - name: jellyfin-tcp
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
    - match: Host(`jellyfin.solonsstuff.com`)
      kind: Rule
      services:
        - name: jellyfin-tcp
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: solonsstuff-com-live-tls
